# ECO_Voice

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPLETE_SOLUTION.md  DEV_WORKFLOW.md  flash_model.py  idf_component.yml  partitions.csv  pio_sr_models.py  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3  train_wake_word.py
ECO_Voice_System/: HARDWARE_DIAGRAM.txt  LIBRARIES.md  README.md  appliance_control.cpp  appliance_control.h  audio_handler.cpp  audio_handler.h  config.h  eco_voice_main.ino  secrets.h  secrets.h.example  sensor_handler.cpp  sensor_handler.h  voice_recognition.cpp  voice_recognition.h
ECO_Voice_System/Docs/: ESP_SR_INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_START.md  SETUP_GUIDE.md  TESTING_GUIDE.md
boards/: esp32-s3-devkitc-1-n16r8.json
main/: CMakeLists.txt  appliance_control.cpp  appliance_control.h  audio_handler.h  config.h  dht11.c  dht11.h  main.cpp  sensor_handler.cpp  sensor_handler.h  voice_recognition.cpp  voice_recognition.h
src/: CMakeLists.txt  appliance_control.cpp  appliance_control.h  audio_handler.cpp  audio_handler.h  config.h  main.c  main.cpp  secrets.h  secrets.h.example  sensor_handler.cpp  sensor_handler.h  serial_monitor.h  voice_recognition.cpp  voice_recognition.h
